--- a/app/src/main/res/layout/listitem_recordlist_layout.xml
+++ b/app/src/main/res/layout/listitem_recordlist_layout.xml
@@ -13,7 +13,9 @@
         android:paddingLeft="16dp"
         android:paddingBottom="2dp"
         android:paddingTop="2dp"
-        android:gravity="left" />
+        android:gravity="left"
+        android:textSize="18sp"
+        android:textColor="@color/blue_trans"/>
 
     <LinearLayout
         android:id="@+id/second_item"
@@ -29,7 +31,8 @@
             android:paddingLeft="16dp"
             android:paddingTop="2dp"
             android:paddingRight="16dp"
-            android:paddingBottom="2dp" />
+            android:paddingBottom="2dp"
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@+id/modify_date"
@@ -40,6 +43,7 @@
             android:paddingLeft="16dp"
             android:paddingTop="2dp"
             android:paddingRight="16dp"
-            android:paddingBottom="2dp" />
+            android:paddingBottom="2dp"
+            android:textSize="12sp"/>
     </LinearLayout>
 </LinearLayout>
