--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -20,7 +20,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/change_theme"
-        android:icon="@drawable/ic_card_24dp"
+        android:icon="@drawable/ic_notification"
         android:title="选择主题"
         app:showAsAction="always" />
 </menu>
