--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <!-- for signui -->
 
     <color name="white_text">#fafafa</color>
+    <color name="text_Grey">#c1c1c2</color>
+    <color name="colorWhite">#ffffff</color>
 
     <!-- notification text -->
     <color name="bottom_text">#c1c0c0</color>
