--- a/app/src/main/res/drawable-v21/linerlayout_water_selector.xml
+++ b/app/src/main/res/drawable-v21/linerlayout_water_selector.xml
@@ -5,7 +5,7 @@
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <corners android:radius="12dp" />
-            <solid android:color="@color/colorWhite" />
+            <solid android:color="@color/thub_normal" />
         </shape>
     </item>
 </ripple>
