--- a/app/src/main/res/layout/listitem_layout.xml
+++ b/app/src/main/res/layout/listitem_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/text_Grey"
+    android:background="@color/colorWhite"
     android:padding="6dp">
 <android.support.constraint.ConstraintLayout
     android:id="@+id/item_content"
@@ -17,22 +17,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="4dp"
+        android:maxLines="2"
         app:layout_constraintEnd_toEndOf="@+id/form_img"
         app:layout_constraintStart_toStartOf="@+id/form_img"
         app:layout_constraintBottom_toTopOf="@+id/form_img"
-        android:minHeight="?android:attr/listPreferredItemHeightSmall"
         android:paddingStart="?android:attr/listPreferredItemPaddingStart"
         android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textColor="@android:color/black" />
     <ImageView
         android:id="@+id/form_img"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
+        android:layout_width="180dp"
+        android:layout_height="240dp"
         android:gravity="center_horizontal"
-        android:src="@drawable/logo"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toTopOf="@id/view_record"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
