--- a/app/src/main/res/layout/formimg_activity.xml
+++ b/app/src/main/res/layout/formimg_activity.xml
@@ -8,12 +8,15 @@
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/form_img"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/no_banner"
+        android:adjustViewBounds="true"
+        android:layout_gravity="center"
         />
 
     <ProgressBar
+        android:id="@+id/progress_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
