--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/menu_search"
         android:orderInCategory="1"
-        android:title="@string/search"
+        android:title="search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
 
