--- a/app/src/main/res/layout/formimg_activity.xml
+++ b/app/src/main/res/layout/formimg_activity.xml
@@ -6,7 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.zbform.penform.blepen.TouchImageView
+    <!--<com.zbform.penform.blepen.TouchImageView-->
+    <ImageView
         android:id="@+id/form_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
