--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="artist_image">230dp</dimen>
     <dimen name="drawer_icon_size">32dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="pen_info_margin_left">16dp</dimen>
+    <dimen name="pen_info_title_size">18sp</dimen>
+    <dimen name="pen_info_item_height">48dp</dimen>
+    <dimen name="pen_info_content_size">14sp</dimen>
 </resources>
