--- a/app/src/main/res/menu/menu_draw.xml
+++ b/app/src/main/res/menu/menu_draw.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/actionbar_search"
+        android:id="@+id/add_record"
+        android:icon="@drawable/ic_menu_add"
         android:orderInCategory="1"
-        android:title="search"
-        app:showAsAction="ifRoom|collapseActionView" />
+        android:title="@string/menu_item_add_record"
+        app:showAsAction="ifRoom" />
 
 
     <!--<item-->
