--- a/app/src/main/res/layout/formimg_activity.xml
+++ b/app/src/main/res/layout/formimg_activity.xml
@@ -21,14 +21,12 @@
             android:title="@string/app_name"
             app:layout_scrollFlags="scroll|enterAlways">
 
-            <TextView
-                android:id="@+id/toolbar_title"
+            <ImageView
+                android:id="@+id/toolbar_state"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:singleLine="true"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:src="@drawable/ic_draw_state"
+                android:layout_gravity="center"/>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
