--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -39,10 +39,10 @@
         android:adjustViewBounds="true"
         android:layout_gravity="center"
         />
-
+<!--
     <ProgressBar
         android:id="@+id/progress_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"/>-->
 </FrameLayout>
