--- a/app/src/main/res/layout/adapter_device.xml
+++ b/app/src/main/res/layout/adapter_device.xml
@@ -6,14 +6,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp">
+        android:layout_height="64dp">
 
         <ImageView
             android:id="@+id/img_blue"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_centerVertical="true"
-            android:src="@mipmap/ic_blue_remote" />
+            android:src="@drawable/ic_pen" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -45,32 +45,19 @@
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/txt_rssi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp" />
-
-            <ImageView
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_marginLeft="5dp"
-                android:src="@mipmap/ic_rssi" />
-
-            <Button
                 android:id="@+id/btn_connect"
                 android:layout_width="50dp"
-                android:background="@drawable/bg_btn_test"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                android:textColor="@color/colorPrimary"
                 android:text="@string/connect"
-                android:textSize="12sp" />
+                android:textSize="24sp" />
 
         </LinearLayout>
-
+<!--
         <LinearLayout
             android:id="@+id/layout_connected"
             android:layout_width="wrap_content"
@@ -106,8 +93,7 @@
 
                 android:textSize="12sp" />
 
-        </LinearLayout>
-
+        </LinearLayout>-->
 
     </RelativeLayout>
 </LinearLayout>
