--- a/app/src/main/res/layout/fragment_penmanager.xml
+++ b/app/src/main/res/layout/fragment_penmanager.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
     android:orientation="vertical">
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,76 +31,151 @@
                 android:textSize="20sp" />
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
+
     <LinearLayout
-        android:id="@+id/scan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:orientation="vertical"
-        android:padding="10dp">
-        <RelativeLayout
+        android:paddingBottom="16dp">
+
+        <TextView
+            android:id="@+id/pen_nav_connect_info"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="left"
+            android:paddingLeft="16dp"
+            android:text="@string/pen_nav_connect_info"
+            android:textColor="#000000"
+            android:textSize="28sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:orientation="vertical"
+            android:paddingBottom="16dp">
+
+            <TextView
+                android:id="@+id/pen_nav_connect_info_indicate"
+                android:layout_width="match_parent"
+                android:layout_height="24dp"
+                android:layout_gravity="center_horizontal"
+                android:gravity="left"
+                android:text="@string/pen_nav_connect_info_indicate"
+                android:textColor="#888888"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/pen_nav_connect_info_more"
+                android:layout_width="match_parent"
+                android:layout_height="24dp"
+                android:layout_gravity="center_horizontal"
+                android:gravity="left"
+                android:text="@string/pen_nav_connect_info_more"
+                android:textColor="#888888"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/pen_nav_connect_info_more2"
+                android:layout_width="match_parent"
+                android:layout_height="24dp"
+                android:layout_gravity="center_horizontal"
+                android:gravity="left"
+                android:text="@string/pen_nav_connect_info_more2"
+                android:textColor="#888888"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/scan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:orientation="vertical"
             android:padding="10dp">
 
-            <Button
-                android:id="@+id/btn_scan"
+            <TextView
+                android:id="@+id/pen_nav_scan_result_title"
+                android:layout_width="match_parent"
+                android:layout_height="24dp"
+                android:layout_gravity="center_horizontal"
+                android:gravity="left"
+                android:text="@string/pen_nav_scan_result_title"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:visibility="gone" />
+
+            <ListView
+                android:id="@+id/list_device"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginTop="10dp"
+                android:divider="@color/colorPrimary"
+                android:dividerHeight="1dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:scrollbars="none" />
+
+            <ProgressBar
+                android:id="@+id/loading_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/bg_btn_test"
-                android:text="@string/start_scan" />
+                android:layout_gravity="center"
+                android:visibility="gone" />
 
-            <ImageView
-                android:id="@+id/img_loading"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:src="@mipmap/ic_loading"
-                android:visibility="invisible" />
-
-        </RelativeLayout>
-
-        <ListView
-            android:id="@+id/list_device"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:divider="@color/colorPrimary"
-            android:dividerHeight="1dp"
-            android:paddingEnd="5dp"
-            android:paddingStart="5dp"
-            android:scrollbars="none" />
+            <TextView
+                android:id="@+id/pen_nav_scan"
+                android:layout_width="wrap_content"
+                android:layout_height="64dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="32dp"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="@string/start_scan"
+                android:textColor="@color/colorPrimary"
+                android:textSize="36sp" />
+        </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/pen_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone"
-        android:padding="32dp">
+        android:padding="32dp"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/pen_info_item_height"
             android:orientation="horizontal"
             android:padding="10dp">
+
             <TextView
                 android:id="@+id/pen_name_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/pen_name_title"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/pen_info_title_size"/>
+                android:textSize="@dimen/pen_info_title_size" />
+
             <TextView
                 android:id="@+id/pen_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/pen_info_content_size"
-                android:gravity="right"/>
+                android:gravity="right"
+                android:textSize="@dimen/pen_info_content_size" />
         </LinearLayout>
 
         <LinearLayout
@@ -114,13 +190,14 @@
                 android:layout_height="wrap_content"
                 android:text="@string/pen_mac_title"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/pen_info_title_size"/>
+                android:textSize="@dimen/pen_info_title_size" />
+
             <TextView
                 android:id="@+id/pen_mac"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/pen_info_content_size"
-                android:gravity="right" />
+                android:gravity="right"
+                android:textSize="@dimen/pen_info_content_size" />
         </LinearLayout>
 
         <LinearLayout
@@ -128,19 +205,21 @@
             android:layout_height="@dimen/pen_info_item_height"
             android:orientation="horizontal"
             android:padding="10dp">
+
             <TextView
                 android:id="@+id/pen_power_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/pen_power_title"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/pen_info_title_size"/>
+                android:textSize="@dimen/pen_info_title_size" />
+
             <TextView
                 android:id="@+id/pen_power"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/pen_info_content_size"
-                android:gravity="right"/>
+                android:gravity="right"
+                android:textSize="@dimen/pen_info_content_size" />
         </LinearLayout>
 
         <LinearLayout
@@ -148,19 +227,21 @@
             android:layout_height="@dimen/pen_info_item_height"
             android:orientation="horizontal"
             android:padding="10dp">
+
             <TextView
                 android:id="@+id/pen_version_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/pen_version_title"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/pen_info_title_size"/>
+                android:textSize="@dimen/pen_info_title_size" />
+
             <TextView
                 android:id="@+id/pen_version"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/pen_info_content_size"
-                android:gravity="right"/>
+                android:gravity="right"
+                android:textSize="@dimen/pen_info_content_size" />
         </LinearLayout>
 
     </LinearLayout>
