--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,23 +5,31 @@
     android:id="@+id/navigation_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:fitsSystemWindows="true">
 
     <android.support.constraint.ConstraintLayout
+        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:background="@mipmap/topinfo_ban_bg">
-
+        android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/top_bac"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside"
+            android:src="@drawable/zbform_login_log"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
+        <!--<ImageView-->
+            <!--android:id="@+id/top_bac"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:src="@drawable/list_footer_main"-->
+            <!--android:scaleType="centerInside"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/top_bac1"/>-->
 
         <TextView
             android:id="@+id/top_login_name"
