--- a/app/src/main/res/layout/formimg_activity.xml
+++ b/app/src/main/res/layout/formimg_activity.xml
@@ -20,7 +20,14 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             android:title="@string/app_name"
             app:layout_scrollFlags="scroll|enterAlways">
-
+            <TextView
+                android:id="@+id/page_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:singleLine="true"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
             <ImageView
                 android:id="@+id/toolbar_state"
                 android:layout_width="wrap_content"
