--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,29 +16,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerInside"
-            android:src="@drawable/zbform_login_log"
+            android:src="@drawable/lv_menu_log"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
-        <!--<ImageView-->
-            <!--android:id="@+id/top_bac"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:src="@drawable/list_footer_main"-->
-            <!--android:scaleType="centerInside"-->
-            <!--app:layout_constraintLeft_toLeftOf="parent"-->
-            <!--app:layout_constraintRight_toRightOf="parent"-->
-            <!--app:layout_constraintTop_toBottomOf="@+id/top_bac1"/>-->
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/list_activated_holo"
+            app:layout_constraintEnd_toEndOf="@+id/top_bac"
+            app:layout_constraintStart_toStartOf="@+id/top_bac"
+            app:layout_constraintTop_toBottomOf="@+id/top_bac"/>
 
         <TextView
             android:id="@+id/top_login_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="未登陆"
+            android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="@+id/top_bac"
             app:layout_constraintStart_toStartOf="@+id/top_bac"
-            app:layout_constraintTop_toBottomOf="@+id/top_bac"
+            app:layout_constraintTop_toBottomOf="@+id/divider"
              />
     </android.support.constraint.ConstraintLayout>
 
