--- a/app/src/main/res/layout/formimg_activity.xml
+++ b/app/src/main/res/layout/formimg_activity.xml
@@ -4,6 +4,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.design.widget.AppBarLayout
@@ -20,14 +21,30 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             android:title="@string/app_name"
             app:layout_scrollFlags="scroll|enterAlways">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
             <TextView
                 android:id="@+id/page_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
                 android:singleLine="true"
                 android:textColor="@color/white"
+                android:layout_gravity="center_vertical"
                 android:textSize="16sp" />
+
+                <ImageView
+                    android:id="@+id/show_item"
+                    android:padding="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/ic_show_item"/>
+
+            </LinearLayout>
+
             <ImageView
                 android:id="@+id/toolbar_state"
                 android:layout_width="wrap_content"
@@ -42,14 +59,15 @@
         android:id="@+id/form_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/no_banner"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
         />
-
-    <!--<ProgressBar-->
-        <!--android:id="@+id/progress_img"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"/>-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fb_add_record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:clickable="true"
+        android:src="@drawable/ic_menu_add" />
 </FrameLayout>
