add form setting
Signed-off-by: requestion <requestion@163.com>

--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -11,4 +11,9 @@
         android:icon="@drawable/ic_pencircle"
         android:title="@string/pref_header_pen_manage" />
 
+    <header
+        android:fragment="com.zbform.penform.fragment.FormSettingFragment"
+        android:icon="@drawable/ic_form_setting"
+        android:title="@string/pref_header_form" />
+
 </preference-headers>
