modify recognize stroke
Signed-off-by: kevin.zhang <kevin.zhang@163.com>

--- a/app/src/main/res/layout/listitem_recorditem_layout.xml
+++ b/app/src/main/res/layout/listitem_recorditem_layout.xml
@@ -13,6 +13,7 @@
         android:textColor="@color/blue_trans"
         android:gravity="center_vertical"
         android:layout_alignParentLeft="true"
+        android:paddingLeft="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
