--- a/app/src/main/res/layout/activity_pen_nav2.xml
+++ b/app/src/main/res/layout/activity_pen_nav2.xml
@@ -1,91 +1,76 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_pen_nav2"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/pen_nav_open_info"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:gravity="left"
+        android:paddingLeft="16dp"
+        android:text="@string/pen_nav_open_info"
+        android:textColor="#000000"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/pen_nav_second_img"
+        android:layout_width="match_parent"
+        android:layout_height="176dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/nav2_icon_pencil2"
+        app:layout_constraintTop_toBottomOf="@id/pen_nav_open_info" />
+
+    <TextView
+        android:id="@+id/pen_nav_open_info_indicate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginTop="10dp"
+        android:gravity="left"
+        android:paddingLeft="16dp"
+        android:text="@string/pen_nav_open_info_indicate"
+        android:textColor="#888888"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/pen_nav_second_img" />
+
+    <TextView
+        android:id="@+id/pen_nav_open_info_more"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:paddingLeft="16dp"
+        android:text="@string/pen_nav_open_info_more"
+        android:textColor="#888888"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/pen_nav_open_info_indicate" />
+
+    <TextView
+        android:id="@+id/pen_nav_open_info_more2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:paddingLeft="16dp"
+        android:text="@string/pen_nav_open_info_more2"
+        android:textColor="#888888"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/pen_nav_open_info_more" />
+
+    <TextView
+        android:id="@+id/pen_nav_start_open_pen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="32dp"
-        android:orientation="vertical"
-        android:paddingBottom="16dp">
-
-        <TextView
-            android:id="@+id/pen_nav_open_info"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:layout_gravity="center_horizontal"
-            android:paddingLeft="16dp"
-            android:gravity="left"
-            android:text="@string/pen_nav_open_info"
-            android:textColor="#000000"
-            android:textSize="28sp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/pen_nav_second_img"
-            android:layout_width="316dp"
-            android:layout_height="176dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="32dp"
-            android:src="@drawable/nav2_icon_pencil2" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            android:orientation="vertical"
-            android:paddingBottom="8dp">
-
-            <TextView
-                android:id="@+id/pen_nav_open_info_indicate"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="left"
-                android:text="@string/pen_nav_open_info_indicate"
-                android:textColor="#888888"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/pen_nav_open_info_more"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="left"
-                android:text="@string/pen_nav_open_info_more"
-                android:textColor="#888888"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/pen_nav_open_info_more2"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="left"
-                android:text="@string/pen_nav_open_info_more2"
-                android:textColor="#888888"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/pen_nav_start_open_pen"
-            android:layout_width="wrap_content"
-            android:layout_height="64dp"
-            android:layout_gravity="right"
-            android:layout_marginBottom="32dp"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="@string/pen_nav_next"
-            android:textColor="@color/colorPrimary"
-            android:textSize="32sp" />
-    </LinearLayout>
-</LinearLayout>
+        android:clickable="true"
+        android:gravity="center"
+        android:text="@string/pen_nav_next"
+        android:textColor="@color/colorPrimary"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pen_nav_open_info_more2" />
+</android.support.constraint.ConstraintLayout>
