--- a/app/src/main/res/layout/fragment_penmanager.xml
+++ b/app/src/main/res/layout/fragment_penmanager.xml
@@ -41,123 +41,11 @@
         android:layout_height="match_parent"
         android:visibility="gone">
     </include>
-    <LinearLayout
-        android:id="@+id/activity_pen_nav3"
+    <include layout="@layout/activity_pen_nav3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="vertical"
-        android:paddingBottom="16dp"
+        android:layout_height="match_parent"
         android:visibility="gone">
-
-        <TextView
-            android:id="@+id/pen_nav_connect_info"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:layout_gravity="center_horizontal"
-            android:gravity="left"
-            android:paddingLeft="16dp"
-            android:text="@string/pen_nav_connect_info"
-            android:textColor="#000000"
-            android:textSize="28sp"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            android:orientation="vertical"
-            android:paddingBottom="16dp">
-
-            <TextView
-                android:id="@+id/pen_nav_connect_info_indicate"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="left"
-                android:text="@string/pen_nav_connect_info_indicate"
-                android:textColor="#888888"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/pen_nav_connect_info_more"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="left"
-                android:text="@string/pen_nav_connect_info_more"
-                android:textColor="#888888"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/pen_nav_connect_info_more2"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="left"
-                android:text="@string/pen_nav_connect_info_more2"
-                android:textColor="#888888"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/scan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-            <TextView
-                android:id="@+id/pen_nav_scan_result_title"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="left"
-                android:text="@string/pen_nav_scan_result_title"
-                android:textColor="#000000"
-                android:textSize="14sp"
-                android:visibility="gone" />
-
-            <ListView
-                android:id="@+id/list_device"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_marginTop="10dp"
-                android:divider="@color/colorPrimary"
-                android:dividerHeight="1dp"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
-                android:scrollbars="none" />
-
-            <ProgressBar
-                android:id="@+id/loading_progress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/pen_nav_scan"
-                android:layout_width="wrap_content"
-                android:layout_height="64dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="32dp"
-                android:clickable="true"
-                android:gravity="center"
-                android:text="@string/start_scan"
-                android:textColor="@color/colorPrimary"
-                android:textSize="36sp" />
-        </LinearLayout>
-    </LinearLayout>
+    </include>
 
     <LinearLayout
         android:id="@+id/pen_info"
