--- a/app/src/main/res/layout/formimg_activity.xml
+++ b/app/src/main/res/layout/formimg_activity.xml
@@ -54,14 +54,18 @@
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
-    <!--<com.zbform.penform.blepen.TouchImageView-->
-    <ImageView
-        android:id="@+id/form_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center"
-        />
+    <!--<ImageView-->
+        <!--android:id="@+id/form_img"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:adjustViewBounds="true"-->
+        <!--android:layout_gravity="center"-->
+        <!--/>-->
+    <com.zbform.penform.view.CustViewPager
+        android:id="@+id/form_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </com.zbform.penform.view.CustViewPager>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fb_add_record"
         android:layout_width="wrap_content"
