支持viewpage切换,图片缩放
Signed-off-by: requestion <requestion@163.com>

--- a/app/src/main/res/menu/menu_page.xml
+++ b/app/src/main/res/menu/menu_page.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/img_pre"
-        android:icon="@drawable/verticalright"
-        android:orderInCategory="1"
-        android:title="@string/menu_item_pre"
-        app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/img_next"
-        android:icon="@drawable/verticalleft"
-        android:orderInCategory="1"
-        android:title="@string/menu_item_next"
-        app:showAsAction="ifRoom" />
+    <!--<item-->
+        <!--android:id="@+id/img_pre"-->
+        <!--android:icon="@drawable/verticalright"-->
+        <!--android:orderInCategory="1"-->
+        <!--android:title="@string/menu_item_pre"-->
+        <!--app:showAsAction="ifRoom" />-->
+    <!--<item-->
+        <!--android:id="@+id/img_next"-->
+        <!--android:icon="@drawable/verticalleft"-->
+        <!--android:orderInCategory="1"-->
+        <!--android:title="@string/menu_item_next"-->
+        <!--app:showAsAction="ifRoom" />-->
     <item
         android:id="@+id/img_form_data"
         android:icon="@drawable/ic_form_data"
