--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,27 +19,38 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             android:title="@string/app_name"
             app:layout_scrollFlags="scroll|enterAlways">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-            <TextView
-                android:id="@+id/toolbar_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:singleLine="true"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
 
-            <ImageView
-                android:id="@+id/item_recognize"
-                android:padding="4dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_form_recognize"/>
+                <TextView
+                    android:id="@+id/toolbar_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:singleLine="true"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
+
+                <ImageView
+                    android:id="@+id/show_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:padding="4dp"
+                    android:src="@drawable/ic_show_item" />
+
+                <ImageView
+                    android:id="@+id/item_recognize"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:padding="4dp"
+                    android:src="@drawable/ic_form_recognize" />
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
@@ -48,23 +58,34 @@
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/fd_record"
-        android:background="@color/normalBackground"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/record_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            />
+        android:layout_height="match_parent"
+        android:background="@color/normalBackground">
+        <!--<ImageView-->
+        <!--android:id="@+id/record_img"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:adjustViewBounds="true"-->
+        <!--/>-->
+        <FrameLayout
+            android:id="@+id/ll_root"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <ListView
-                android:id="@+id/id_lv_right_menu"
-                android:layout_above="@+id/lv_footer"
-                android:layout_width="320dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="end"
-                android:background="@android:color/white"/>
+            <com.zbform.penform.view.CustViewPager
+                android:id="@+id/record_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></com.zbform.penform.view.CustViewPager>
+        </FrameLayout>
+
+        <ListView
+            android:id="@+id/id_lv_right_menu"
+            android:layout_width="320dp"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/lv_footer"
+            android:layout_gravity="end"
+            android:background="@android:color/white" />
 
     </android.support.v4.widget.DrawerLayout>
-</LinearLayout>
+
+</FrameLayout>
